# cs336_assignment5_rl

./: .gitignore  README.md  pyproject.toml
chapter5/cs336_alignment/: __init__.py
cs336_bacis/grpo/: __init__.py  compute_group_normalized_reward.py  compute_grpo_clip_loss.py  compute_grpo_microbatch_train_step.py  compute_naive_policy_gradient_loss.py  compute_policy_gradient_loss.py  masked_mean.py  train_grpo.py
cs336_bacis/sft/: compute_entropy.py  get_response_log_probs.py  masked_normalize.py  sft_experiment.py  sft_microbatch_train_step.py  sft_train.py  sft_transformer.py  tokenize_prompt_and_output.py
cs336_bacis/sft/outputs/: sft_metrics.json  trl_sft_vs_base_comparison.json  trl_sft_vs_base_comparison_quick.json
cs336_bacis/vllm/: run_evaluate_llm.py  vllm.py
